HTML: Sections,class,Ids

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
         rel="stylesheet" 
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href = "./assets/styles.css">
-
 </head>
 
 <body>
@@ -31,14 +30,19 @@
                 <button class="btn btn-primary" type="button" id="search-btn"> Search </button>
             </div>
         </div>
+        <div class="container-sm-7" id ="cityListLocal">For Local Storage
+
+        </div>
     </div>
+
     
-    <div class="container-md">100% wide until medium breakpoint
-        
+    <div class="container-md hide" id="">Container to display Current Temperature
+        <h2 id="cityNameSearch"></h2>
     </div>
 
-    <div class="container-md">100% wide until medium breakpoint
-
+    <div class="container-md hide" id="5ForecastContainer">Container to display the five day forecast
+        <h2 ><strong>5 Day Forecast:</strong></h2>
+        <div class="" id="cityForecastSearch"></div> 
     </div>
 
 
