HTML Script  pulling in the API calls

--- a/index.html
+++ b/index.html
@@ -22,29 +22,29 @@
       </nav>
       
 
-    <div class="row g-3">        
-        <div class="col-sm-7">
+    <div class="row g-3 ">        
+        <div class="col-sm-3" id="formContainer">
             <h2 class="text-center" id="search-title">Search for a City:</h2>
             <input type="text" class="form-control" placeholder="City" aria-label="City">
             <div class="d-grid col-6 mx-auto p-2">
-                <button class="btn btn-primary" type="button" id="search-btn"> Search </button>
+                <button class="btn btn-primary" type="button" id="btnSearch"> Search </button>
             </div>
         </div>
-        <div class="container-sm-7" id ="cityListLocal">For Local Storage
+        <div class="container-sm-3 " id ="cityListLocal">For Local Storage</div>
+   
+    <div class="container-fluid text-center" id="">Response conatiner
+        <div class="row">
+          <div class="col-lg-6" id="dailyForecast" >col
 
+          </div>
         </div>
-    </div>
 
-    
-    <div class="container-md hide" id="">Container to display Current Temperature
-        <h2 id="cityNameSearch"></h2>
-    </div>
+        <div class="row">
+          <div class="col-lg-6" id="weeklyForecast">col
 
-    <div class="container-md hide" id="5ForecastContainer">Container to display the five day forecast
-        <h2 ><strong>5 Day Forecast:</strong></h2>
-        <div class="" id="cityForecastSearch"></div> 
-    </div>
-
+          </div>
+        </div>
+      </div>
 
 
     <!-- SCRIPT Links for APIs and Custom logic -->
