Local History city has button event Listner. Need to isolate text from container

--- a/index.html
+++ b/index.html
@@ -15,12 +15,15 @@
 <body>
   <h1> Weather Dashboard</h1>
   <div class="container row justify-content-between">
-
     <div class="col-sm-3" id="formContainer">
       <h2 class="text-center" id="searchTitle">Search for a City:</h2>
       <input type="text" class="form-control" id="citySearch" placeholder="Place a City's Name" aria-label="City">
       <div class="d-grid col-6 p-2 mx-auto" >
           <button class="btn btn-primary" type="button" id="btnSearch"> Search </button>
+      </div>
+      <!-- This is where I am going to place the local storage location -->
+      <div class="btn-group-vertical cityHistory">
+
       </div>
     </div>
 
