Local storage Buttons from past searched are console logging the text Content. Stuck on using the text content to re run the function for city Cordinates

--- a/index.html
+++ b/index.html
@@ -22,9 +22,8 @@
           <button class="btn btn-primary" type="button" id="btnSearch"> Search </button>
       </div>
       <!-- This is where I am going to place the local storage location -->
-      <div class="btn-group-vertical cityHistory">
+      <div class="btn-group-vertical cityHistory"></div>
 
-      </div>
     </div>
 
     
